Update XmlMerkleDiff4.java